<resources>
    <!-- general info -->
    <string name="app_name">Blusay</string>

    <!-- initial screen -->
    <string name="signInLabel">Password log in</string>
    <string name="signUpLabel">Password sign up</string>
    <string name="unlockedUserLabel">Continue as unlocked user</string>
    <string name="passwordLogInPrompt">Enter username</string>
    <string name="passwordSignInPrompt">Enter password</string>

    <!-- sign up screen -->
    <string name="signUpMoreInfo">
        •\tMake a locked account that must be accessed with a username and password\n
        •\tOne unlocked account and unlimited locked accounts \nare allowed per device\n
        •\tAll accounts are available only to the local device.

    </string>
    <string name="signUpMainLabel">Create account</string>
    <string name="signUpNamePrompt">Enter name</string>
    <string name="signUpAltPrompt">Enter alternative or username</string>
    <string name="signUpPassPrompt">Enter password</string>
    <string name="signUpRePassPrompt">Re-enter password</string>
    <string name="signUpNameOptPrompt">Refer as name or username?</string>
    <string name="signUpOptNamePrompt">Name</string>
    <string name="signUpOptUsernamePrompt">Username</string>
    <string name="signUpCheckConfirmButton">Confirm</string>

    <!-- main menu screen -->
    <string name="mainMenuPrompt">How are you right now?</string>
    <string name="mainMenuReminderLabel">Reminders</string>
    <string name="mainMenuReminderContext">No current reminders\nend</string>

    <string-array name="mainMenuReminders">
        <item>Reminder 1</item>
        <item>Reminder 2</item>
        <item>Reminder 3</item>
        <item>Reminder 4</item>
    </string-array>

    <!-- mood selected screen -->
    <string name="moodSelectedPrompt">Current Mood</string>
    <string name="moodSelectedNoticeLabel">Notice</string>
    <string name="moodSelectedNoticeDefault">What would you like to do?</string>
    <string name="moodSelectedDescLabel">Mood Description</string>
    <string name="moodSelectedLevelsLabel">Mood Levels</string>

    <!-- all response top prompts -->
    <string name="responseMusicPrompt">Listen to Audio</string>
</resources>


<!-- for initial xml: make custom text style for name, logo/background
                java: fill on change screen listeners for continue local/continue locked user,
                        problem with clicking log in, then cant go back to initial screen showing of buttons-->
<!-- for sign up xml: put picture at the top of screen?
                java: do confirm,
                        must check username available in local device and passwords match
                        then give error and stay screen OR next screen and save all user info into a new account -->
<!-- for main menu xml: details for expanded reminders (more info in comments),
                        log out button confirm window,
                        settings button window/options -->
