<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    >
    <RelativeLayout
        android:id="@+id/signUpPromptLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/signUpPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpMainLabel"
            android:textSize="40sp"
            android:textColor="@color/darkBlue"
            android:textStyle="italic"

            android:layout_centerHorizontal="true"
            />

        <ImageButton
            android:id="@+id/signUpMoreInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/vector_more_info"

            android:layout_toRightOf="@id/signUpPrompt"
            android:layout_marginLeft="2dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/signUpMoreInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpMoreInfo"
        android:textAlignment="center"
        android:visibility="invisible"

        android:layout_below="@id/signUpPromptLayout"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_below="@id/signUpPromptLayout"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        >
        <EditText
            android:id="@+id/signUpDesiredName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUpNamePrompt"
            android:textColorHint="@color/auburn"
            android:textColor="@color/auburn"
            android:textAlignment="center"
            android:textSize="18sp"

            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/signUpDesiredAlt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUpAltPrompt"
            android:textColorHint="@color/auburn"
            android:textColor="@color/auburn"
            android:textAlignment="center"
            android:textSize="18sp"

            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpNameOptPrompt"
            android:textColor="@color/auburn"
            android:textAlignment="center"
            android:textSize="18sp"

            android:layout_marginTop="20dp"
            />

        <RadioGroup
            android:id="@+id/signUpDesiredOpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"

            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signUpOptNamePrompt"
                android:textColor="@color/darkGreen"
                android:textSize="15sp"
                android:buttonTint="@color/darkGreen"
                />
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signUpOptUsernamePrompt"
                android:textColor="@color/darkGreen"
                android:textSize="15sp"
                android:buttonTint="@color/darkGreen"
                />

        </RadioGroup>

        <EditText
            android:id="@+id/signUpDesiredPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signUpPassPrompt"
            android:textColorHint="@color/auburn"
            android:textColor="@color/auburn"
            android:textAlignment="center"
            android:textSize="18sp"
            style="@style/TextAppearance.AppCompat"

            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/signUpDesiredRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signUpRePassPrompt"
            android:textColorHint="@color/auburn"
            android:textColor="@color/auburn"
            android:textAlignment="center"
            android:textSize="18dp"
            style="@style/TextAppearance.AppCompat"

            android:layout_marginTop="20dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/signUpConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Confirm"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/darkGreen"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        />
</RelativeLayout>