<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    >
    <Button
        android:id="@+id/loginUnlockedUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unlockedUserLabel"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="serif"
        android:background="@color/darkGreen"

        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        />

    <LinearLayout
        android:id="@+id/loginMemberUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"

        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:layout_above="@id/loginUnlockedUser"
        >
        <Button
            android:id="@+id/loginMemberLogIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/signInLabel"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="serif"
            android:background="@color/darkGreen"
            android:layout_weight="1"
            android:visibility="visible"

            android:layout_marginRight="3dp"
            />
        <Button
            android:id="@+id/loginMemberSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/signUpLabel"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="serif"
            android:background="@color/darkGreen"
            android:layout_weight="1"
            android:visibility="visible"

            android:layout_marginLeft="3dp"
            />

        <EditText
            android:id="@+id/loginPasswordLogIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/passwordLogInPrompt"
            android:textColorHint="@color/darkRed"
            android:textColor="@color/darkRed"
            android:textSize="12sp"
            android:fontFamily="serif"
            android:foreground="@drawable/custom_simple_border"
            android:layout_weight="1"
            style="@style/TextAppearance.AppCompat"
            android:visibility="gone"

            android:layout_marginRight="3dp"
            />
        <EditText
            android:id="@+id/loginPasswordSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/passwordSignInPrompt"
            android:textColorHint="@color/darkRed"
            android:textColor="@color/darkRed"
            android:textSize="12sp"
            android:fontFamily="serif"
            android:foreground="@drawable/custom_simple_border"
            android:layout_weight="1"
            style="@style/TextAppearance.AppCompat"
            android:visibility="gone"

            android:layout_marginLeft="3dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="55sp"
        android:textColor="@color/darkBlue"
        android:textStyle="italic"
        android:fontFamily="serif"
        android:foreground="@null"

        android:layout_centerHorizontal="true"
        android:layout_above="@id/loginMemberUser"
        />
</RelativeLayout>