<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    >
    <Button
        android:id="@+id/initialLocalUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localUserLabel"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@color/lighterAuburn"

        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        />

    <LinearLayout
        android:id="@+id/initialMemberUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"

        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:layout_above="@id/initialLocalUser"
        >
        <Button
            android:id="@+id/initialMemberLogIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/signInLabel"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@color/lighterAuburn"
            android:layout_weight="1"
            android:visibility="visible"

            android:layout_marginRight="3dp"
            />
        <Button
            android:id="@+id/initialMemberSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/signUpLabel"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@color/lighterAuburn"
            android:layout_weight="1"
            android:visibility="visible"

            android:layout_marginLeft="3dp"
            />

        <EditText
            android:id="@+id/initialPasswordLogIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/passwordLogInPrompt"
            android:textColorHint="@color/lighterAuburn"
            android:textColor="@color/lighterAuburn"
            android:textSize="17sp"
            android:foreground="@drawable/simple_border_alt"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            style="@style/TextAppearance.AppCompat"
            android:visibility="gone"

            android:layout_marginRight="3dp"
            />
        <EditText
            android:id="@+id/initialPasswordSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/passwordSignInPrompt"
            android:textColorHint="@color/lighterAuburn"
            android:textColor="@color/lighterAuburn"
            android:textSize="17sp"
            android:foreground="@drawable/simple_border_alt"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            style="@style/TextAppearance.AppCompat"
            android:visibility="gone"

            android:layout_marginLeft="3dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/initialBlusay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="55sp"
        android:textColor="@color/lightBlue"
        android:textStyle="italic"
        android:foreground="@null"

        android:layout_centerHorizontal="true"
        android:layout_above="@id/initialMemberUser"
        />
</RelativeLayout>