<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    >

    <TextView
        android:id="@+id/initialBlusay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="55sp"
        android:textColor="@color/darkBlue"
        android:textStyle="italic"
        android:foreground="@null"

        android:layout_centerHorizontal="true"
        android:layout_above="@id/initialMemberUser"
        />

    <LinearLayout
        android:id="@+id/initialMemberUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"

        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:layout_above="@id/initialLocalUser"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToSignIn"
            android:text="@string/signInLabel"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@color/darkGreen"

            android:layout_marginRight="3dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToSignUp"
            android:text="@string/signUpLabel"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@color/darkGreen"

            android:layout_marginLeft="3dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/initialLocalUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localUserLabel"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/darkGreen"

        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        />
</RelativeLayout>