<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    >
    <include layout="@layout/fragment_top_bar"
        android:id="@+id/topBarLayout"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        android:layout_below="@id/topBarLayout"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/moodSelectPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moodSelectedPrompt"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textAlignment="center"

                android:layout_centerHorizontal="true"
                />

            <ImageButton
                android:id="@+id/moodSelectMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/vector_more_info"

                android:layout_toRightOf="@id/moodSelectPrompt"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="2dp"
                />
            <!-- if clicked,
                 show layout until re-click i or click outside the shown layout
                 -->

            <TextView
                android:id="@+id/moodSelectNoticeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moodSelectedNoticeLabel"
                android:textColor="@color/lightBlue"
                android:textSize="12sp"

                android:layout_below="@+id/moodSelectPrompt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                />

            <RelativeLayout
                android:id="@+id/moodSelectNoticeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/moodSelectNoticeLabel"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="6dp"
                >
                <TextView
                    android:id="@+id/moodSelectNoticeText"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/moodSelectedNoticeDefault"
                    android:textColor="@color/grey"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    />
                <!-- Tip options:
                        What would you like to do? ***
                        What would you like?
                        What do you need? ***
                        What can help?
                        What to do?
                        What kind of assistance?
                        What is your answer?
                        What is your response?
                        How to respond?
                        How do you respond?

                        What is your mood?
                        How are you?
                    -->
            </RelativeLayout>

            <GridView
                android:id="@+id/moodSelectResponseLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"

                android:layout_below="@id/moodSelectNoticeLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>